clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-clusterip
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    #nodePort: 5000
  selector:
    app: front-end
