deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
#      nodeSelector:
#        "beta.kubernetes.io/os": linux
      containers:
      - name: front-end
        image: eyastaifour.azurecr.io/service01melb:latest
        ports:
          - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    #nodePort: 5000
  selector:
    app: front-end
